Fix link hover and inline code syntax highlighting
- Fix link underline extending into trailing whitespace by
  removing template whitespace around the slot
- Fix links underlining on paragraph hover instead of link hover
  by correcting modifier order to prose-a:hover:underline
- Add rehype-inline-code plugin to handle {:lang} and {:.token}
  annotations from rehype-pretty-code syntax, applying Shiki
  highlighting to inline code elements
- Fix inline code dark mode by overriding Shiki's inline styles
  on the code element itself

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -32,6 +32,7 @@ body {
   text-rendering: optimizeSpeed;
 }
 
+
 /* Heading anchor links (rehype-autolink-headings) */
 
 :is(h1, h2, h3, h4) a[href^='#'] {
@@ -115,6 +116,26 @@ body {
 
 .dark :not(pre) > code {
   background-color: rgb(39 39 42);
+}
+
+/* Inline code with syntax highlighting */
+
+:not(pre) > code[data-language] {
+  color: var(--shiki-light) !important;
+  background-color: var(--shiki-light-bg, rgb(244 244 245)) !important;
+}
+
+:not(pre) > code[data-language] span {
+  color: var(--shiki-light) !important;
+}
+
+.dark :not(pre) > code[data-language] {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg, rgb(39 39 42)) !important;
+}
+
+.dark :not(pre) > code[data-language] span {
+  color: var(--shiki-dark) !important;
 }
 
 /* Line numbers */
